Login page fixes, add checkbox for shift channel
Fixes login page not submitting when pressing enter, also centered the login button.

Added checkbox for new shift channel feature that is on by default. Unchecking the box reverts the mapping to the old method.

Removed "(Emby only)" from kids category as this category is now supported in Plex as well.

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -354,6 +354,11 @@ input[type=button].center{
   border-bottom: solid 0px #777;
 }
 
+.shiftChannelLabel {
+  display: inline;
+  margin-left: 5px;
+  margin-bottom: 20px;
+}
 
 .half {
   display: block;
